--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   </div>
                   <div class="main-menu__nav-wrap-list">
                     <ul class="main-menu__nav-list">
-                      <li class="main-menu__nav-item"><a class="main-menu__nav-link" href="about-us.html" target="_blank" rel="noreferrer">About Us</a></li>
+                      <li class="main-menu__nav-item"><a class="main-menu__nav-link" href="https://sivla7.github.io/Joinery/about-us.html" target="_blank" rel="noreferrer">About Us</a></li>
                       <li class="main-menu__nav-item"><a class="main-menu__nav-link" href="#" target="_blank" rel="noreferrer">Why Us</a></li>
                       <li class="main-menu__nav-item"><a class="main-menu__nav-link" href="#" target="_blank" rel="noreferrer">Corporate Structure</a></li>
                     </ul>
@@ -122,7 +122,7 @@
               <source srcset="img/logo.png" type="image/png"><img class="header__logo-img" src="img/logo.png" alt="">
             </picture></a></div>
         <div class="header__item header__item_contacts">
-          <div class="header__contacts"><a class="header__contacts-item" href="mailto:info@gmail.com" aria-label="Mail us"><img class="header__contacts-item-img" src="img/icons/icon-mail.svg" alt=""></a><a class="header__contacts-item" href="tel:375000000000" aria-label="Call us"><img class="header__contacts-item-img" src="img/icons/icon-phone.svg" alt=""></a></div>
+          <div class="header__contacts"><a class="header__contacts-item" href="mailto:hi@vladsivenkov.com" aria-label="Mail us"><img class="header__contacts-item-img" src="img/icons/icon-mail.svg" alt=""></a><a class="header__contacts-item" href="tel:+375291382469" aria-label="Call us"><img class="header__contacts-item-img" src="img/icons/icon-phone.svg" alt=""></a></div>
         </div>
         <nav class="header__nav header__item">
           <ul class="header__nav-list">
