--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   </div>
                   <div class="main-menu__nav-wrap-list">
                     <ul class="main-menu__nav-list">
-                      <li class="main-menu__nav-item"><a class="main-menu__nav-link" href="https://sivla7.github.io/Joinery/about-us.html" target="_blank" rel="noreferrer">About Us</a></li>
+                      <li class="main-menu__nav-item"><a class="main-menu__nav-link" href="about-us.html" target="_blank" rel="noreferrer">About Us</a></li>
                       <li class="main-menu__nav-item"><a class="main-menu__nav-link" href="#" target="_blank" rel="noreferrer">Why Us</a></li>
                       <li class="main-menu__nav-item"><a class="main-menu__nav-link" href="#" target="_blank" rel="noreferrer">Corporate Structure</a></li>
                     </ul>
